--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -3,14 +3,14 @@
 .App {
   height: 100%;
   width: 100%;
-  background-color: #fff; /* Match white background */
+  background-color: #fff;
 }
 
 .top-bar {
   background-color: #222831;
   text-align: center;
   justify-content: center;
-  border-bottom: 1px solid #3a3838; /* Add a border at the bottom */
+  border-bottom: 1px solid #3a3838;
   position: relative;
 }
 
@@ -19,8 +19,8 @@
   color: #A91D3A;
   left: 60px;
   top: -18px;
-  font-size: 40px; /* Adjust font size */
-  font-family: 'League Spartan', sans-serif; /* League Spartan font */
+  font-size: 40px;
+  font-family: 'League Spartan', sans-serif;
 //text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
   cursor: default;
 }
@@ -29,15 +29,15 @@
   position: absolute;
   right: 20px;
   bottom: 10px;
-  font-size: 16px; /* Decreased font size */
-  border-radius: 20px; /* Added border radius for rounded corners */
-  padding: 10px 20px; /* Adjusted padding */
+  font-size: 16px;
+  border-radius: 20px;
+  padding: 10px 20px;
   background: #A91D3A;
   border: none;
 }
 
 .top-bar .log-in-button:hover {
-  background: #C73659; /* Change background color on hover */
+  background: #C73659;
   cursor: pointer;
 }
 
@@ -45,15 +45,15 @@
   position: absolute;
   right: 120px;
   bottom: 10px;
-  font-size: 16px; /* Decreased font size */
-  border-radius: 20px; /* Added border radius for rounded corners */
-  padding: 10px 20px; /* Adjusted padding */
+  font-size: 16px;
+  border-radius: 20px;
+  padding: 10px 20px;
   background: #A91D3A;
   border: none;
 }
 
 .top-bar .register-button:hover {
-  background: #C73659; /* Change background color on hover */
+  background: #C73659;
   cursor: pointer;
 }
 
@@ -61,15 +61,15 @@
   position: absolute;
   right: 80px;
   bottom: 10px;
-  font-size: 16px; /* Decreased font size */
-  border-radius: 20px; /* Added border radius for rounded corners */
-  padding: 10px 20px; /* Adjusted padding */
+  font-size: 16px;
+  border-radius: 20px;
+  padding: 10px 20px;
   background: #A91D3A;
   border: none;
 }
 
 .top-bar .create-button:hover {
-  background: #C73659; /* Change background color on hover */
+  background: #C73659;
   cursor: pointer;
 }
 
@@ -80,22 +80,22 @@
   right: 20px;
   bottom: 4px;
   background: transparent;
-  border: 2px solid transparent; /* Yellow border */
-  border-radius: 50%; /* Circular button */
-  transition: border-color 0.3s; /* Added transition for border color change */
+  border: 2px solid transparent;
+  border-radius: 50%;
+  transition: border-color 0.3s;
   cursor: pointer;
 }
 
 .profile-button:hover {
-  border-color: #C73659; /* Darken the border slightly on hover */
+  border-color: #C73659;
 }
 
 .profile-button img {
-  width: 100%; /* Make the image occupy the entire button width */
-  height: 100%; /* Make the image occupy the entire button height */
-  border-radius: 50%; /* Make the image circular */
-  object-fit: cover; /* Ensure the entire image is covered */
-  object-position: center; /* Center the image */
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
   position: absolute;
   right: 0px;
   top: 0px;
@@ -115,15 +115,15 @@
   height: 91.2vh;
   display: flex;
   flex-direction: column;
-  align-items: center; /* Align buttons vertically */
-  border-right: 1px solid #3a3838; /* Add a border on the right */
-  z-index: 2; /* Higher value to be on top */
+  align-items: center;
+  border-right: 1px solid #3a3838;
+  z-index: 2;
 }
 
 .sidebar-button {
   background-color: #222831;
-  color: #aaa; /* Text color */
-  border: none; /* Remove border */
+  color: #aaa;
+  border: none;
   padding: 10px;
   margin-bottom: 10px;
   width: 80px;
@@ -132,12 +132,12 @@
   outline: none;
   transition: background-color 0.3s ease;
   display: flex;
-  justify-content: center; /* Center text horizontally */
-  align-items: center; /* Center text vertically */
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar-button:hover {
-  background-color: #A91D3A; /* Darker yellow on hover */
+  background-color: #A91D3A;
 }
 
 .app-body {
@@ -156,7 +156,7 @@ body {
 }
 
 .search-bar {
-  width: 25%; /* Set the width to a fixed value */
+  width: 25%;
   padding: 10px;
   border: none;
   background: #393E46;
@@ -177,9 +177,7 @@ body {
   bottom: 10px;
 }
 
-/* Notification.css */
 
-/* Keyframes for sliding in and out */
 @keyframes slideInOut {
   0% {
     left: -100%;
@@ -195,12 +193,11 @@ body {
   }
 }
 
-/* Notification container */
 .notifications {
   position: fixed;
   top: 250px;
   width: 115px;
-  left: -100%; /* Start off-screen */
+  left: -100%;
   animation: slideInOut 4s ease-in-out forwards;
   z-index: 1000;
   text-align: center;
@@ -221,7 +218,6 @@ body {
   margin-top: 10px;
 }
 
-/* Add animation delay */
 .notifications:nth-child(1) {
   animation-delay: 0s;
 }
@@ -242,14 +238,14 @@ body {
 }
 
 .dropdown1 {
-  z-index: 2; /* Ensure the dropdown appears above other content */
+  z-index: 2;
   text-align: center;
   color: #aaa;
   width: 80px;
 }
 
 .dropdown2 {
-  z-index: 2; /* Ensure the dropdown appears above other content */
+  z-index: 2;
   text-align: center;
   color: #aaa;
   width: 80px;
@@ -275,15 +271,15 @@ body {
   position: absolute;
   right: 370px;
   bottom: 10px;
-  font-size: 16px; /* Decreased font size */
-  border-radius: 20px; /* Added border radius for rounded corners */
-  padding: 10px 20px; /* Adjusted padding */
+  font-size: 16px;
+  border-radius: 20px;
+  padding: 10px 20px;
   background: #A91D3A;
   border: none;
 }
 
 .search-bar-select {
-    width: 25%; /* Set the width to a fixed value */
+    width: 25%;
     padding: 10px;
     border: none;
     background: #393E46;
@@ -305,18 +301,16 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 6px; /* Width of the scrollbar */
+  width: 6px;
 }
 
-/* Scrollbar Handle */
 ::-webkit-scrollbar-thumb {
-  background-color: #aaa; /* Color of the scrollbar handle */
-  border-radius: 6px; /* Rounded corners */
+  background-color: #aaa;
+  border-radius: 6px;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #555; /* Darker color on hover */
+  background-color: #555;
 }
 
 
