--- a/src/stylesheets/CreateRecipe.css
+++ b/src/stylesheets/CreateRecipe.css
@@ -1,4 +1,3 @@
-/* CreateRecipe.css */
 .create-modal {
     position: fixed;
     z-index: 999;
@@ -6,11 +5,10 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .create-modal-content {
@@ -20,65 +18,65 @@
     height: 700px;
     padding: 70px;
     border-radius: 8px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5); /* Box shadow for depth effect */
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
     position: relative;
     display: flex;
-    flex-direction: column; /* Arrange elements in a vertical fashion */
-    align-items: center; /* Center align the elements */
+    flex-direction: column;
+    align-items: center;
     font-size: 20px;
-    overflow-y: auto; /* Enable vertical scrolling */
+    overflow-y: auto;
 }
 
-.create-modal-content form-group{
-    margin-bottom: 15px; /* Add some spacing between form groups */
+.create-modal-content form-group {
+    margin-bottom: 15px;
     display: flex;
-    flex-direction: column; /* Arrange input and label in a vertical fashion */
-    align-items: center; /* Align components to the start of the container */
-    width: 100%; /* Set the width to 100% */
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
-.create-modal-content form{
-    width: 100%; /* Set form width to 100% */
-
+.create-modal-content form {
+    width: 100%;
 }
 
 .create-modal-content form label {
-    margin-bottom: 5px; /* Add some spacing between label and input */
+    margin-bottom: 5px;
     display: flex;
-    flex-direction: row; /* Arrange input and label in a vertical fashion */
-    align-items: flex-start; /* Align components to the start of the container */
+    flex-direction: row;
+    align-items: flex-start;
 }
 
-.create-modal-content form input{
-    width: calc(100%); /* Set input width to 100% minus padding */
-    padding: 8px; /* Add some padding to the input */
-    margin-bottom: 15px; /* Add some spacing between form fields */
-    border-radius: 5px; /* Add border radius */
-    box-sizing: border-box; /* Include padding and border in the width */
-    background-color:  #393E46;
+.create-modal-content form input {
+    width: calc(100%);
+    padding: 8px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background-color: #393E46;
     color: white;
 }
+
 .create-modal-content form textarea {
-    width: calc(100%); /* Set input width to 100% minus padding */
-    height: 200px; /* Set a fixed height */
-    padding: 8px; /* Add some padding to the input */
-    margin-bottom: 15px; /* Add some spacing between form fields */
-    border: 1px solid #ccc; /* Add a border to the input */
-    border-radius: 5px; /* Add border radius */
-    box-sizing: border-box; /* Include padding and border in the width */
-    resize:none;
-    background-color:  #393E46;
+    width: calc(100%);
+    height: 200px;
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    resize: none;
+    background-color: #393E46;
     color: white;
 }
 
 .create-modal-content form select {
-    width: calc(100%); /* Set input width to 100% minus padding */
-    padding: 8px; /* Add some padding to the input */
-    margin-bottom: 15px; /* Add some spacing between form fields */
-    border: 1px solid #ccc; /* Add a border to the input */
-    border-radius: 5px; /* Add border radius */
-    box-sizing: border-box; /* Include padding and border in the width */
-    background-color:  #393E46;
+    width: calc(100%);
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background-color: #393E46;
     color: white;
 }
 
@@ -86,14 +84,14 @@
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #A91D3A; /* Change button color to yellow */
-    color: black; /* Change text color to black */
+    background-color: #A91D3A;
+    color: black;
     cursor: pointer;
-    align-self: center; /* Center the button horizontally */
+    align-self: center;
 }
 
 .create-modal-content form button:hover {
-    background-color: #C73659; /* Darker yellow on hover */
+    background-color: #C73659;
 }
 
 .required {
@@ -104,23 +102,20 @@
 .selector {
     height: 200px;
     font-size: 16px;
-
 }
 
 .selected-box {
     border-radius: 5px;
     width: 100%;
-    max-height: 200px; /* Limit height to fit inside the container */
-    overflow-y: auto; /* Enable vertical scrolling */
+    max-height: 200px;
+    overflow-y: auto;
     margin-bottom: 15px;
     color: black;
-
-
 }
 
 .selected-box button {
-    background-color: #A91D3A; /* Change button color to yellow */
-    color: black; /* Change text color to black */
+    background-color: #A91D3A;
+    color: black;
     border: none;
     border-radius: 5px;
     padding: 5px 10px;
@@ -129,12 +124,10 @@
     margin-left: 10px;
     display: flex;
     align-items: flex-start;
-
 }
 
 .selected-item {
-    background-color:  #393E46;/* Light gray background */
+    background-color: #393E46;
     padding: 10px;
     color: white;
 }
-
