--- a/src/stylesheets/CreateReview.css
+++ b/src/stylesheets/CreateReview.css
@@ -1,4 +1,3 @@
-/* CreateRecipe.css */
 .create-review-modal {
     position: fixed;
     z-index: 999;
@@ -6,11 +5,10 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .create-review-modal-content {
@@ -19,75 +17,77 @@
     height: 550px;
     padding: 70px;
     border-radius: 8px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5); /* Box shadow for depth effect */
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
     position: relative;
     display: flex;
-    flex-direction: column; /* Arrange elements in a vertical fashion */
-    align-items: center; /* Center align the elements */
+    flex-direction: column;
+    align-items: center;
     font-size: 20px;
-    overflow-y: auto; /* Enable vertical scrolling */
+    overflow-y: auto;
     color: white;
 }
 
-.create-review-modal-content form-group{
-    margin-bottom: 15px; /* Add some spacing between form groups */
+.create-review-modal-content form-group {
+    margin-bottom: 15px;
     display: flex;
-    flex-direction: column; /* Arrange input and label in a vertical fashion */
-    align-items: flex-start; /* Align components to the start of the container */
-    width: 100%; /* Set the width to 100% */
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
 }
 
-.create-review-modal-contentform {
-    width: 100%; /* Set form width to 100% */
+.create-review-modal-content form {
+    width: 100%;
 }
 
 .create-review-modal-content form label {
-    margin-bottom: 5px; /* Add some spacing between label and input */
+    margin-bottom: 5px;
 }
 
-.create-review-modal-content form input{
-    width: calc(100%); /* Set input width to 100% minus padding */
-    padding: 8px; /* Add some padding to the input */
-    margin-bottom: 15px; /* Add some spacing between form fields */
-    border: 1px solid #ccc; /* Add a border to the input */
-    border-radius: 5px; /* Add border radius */
-    box-sizing: border-box; /* Include padding and border in the width */
-    background-color:  #393E46
+.create-review-modal-content form input {
+    width: calc(100%);
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background-color: #393E46;
+    color: white;
 }
+
 .create-review-modal-content form textarea {
-    width: calc(100%); /* Set input width to 100% minus padding */
-    height: 200px; /* Set a fixed height */
-    padding: 8px; /* Add some padding to the input */
-    margin-bottom: 15px; /* Add some spacing between form fields */
-    border: 1px solid #ccc; /* Add a border to the input */
-    border-radius: 5px; /* Add border radius */
-    box-sizing: border-box; /* Include padding and border in the width */
-    background-color:  #393E46;
-    resize:none;
+    width: calc(100%);
+    height: 200px;
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background-color: #393E46;
+    resize: none;
     color: white;
 }
 
 .create-review-modal-content form select {
-    width: calc(100%); /* Set input width to 100% minus padding */
-    padding: 8px; /* Add some padding to the input */
-    margin-bottom: 15px; /* Add some spacing between form fields */
-    border: 1px solid #ccc; /* Add a border to the input */
-    border-radius: 5px; /* Add border radius */
-    box-sizing: border-box; /* Include padding and border in the width */
+    width: calc(100%);
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
 
 .create-review-modal-content form button {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #A91D3A; /* Change button color to yellow */
-    color: black; /* Change text color to black */
+    background-color: #A91D3A;
+    color: black;
     cursor: pointer;
-    align-self: center; /* Center the button horizontally */
+    align-self: center;
 }
 
 .create-review-modal-content form button:hover {
-    background-color: #C73659; /* Darker yellow on hover */
+    background-color: #C73659;
 }
 
 .create-review-modal-content .required {
@@ -96,19 +96,17 @@
 }
 
 .star-rating {
-    font-size: 50px; /* Initial size of the stars */
-
+    font-size: 50px;
 }
 
 .star-empty {
-    color: #ccc; /* Default color of empty stars */
-    transition: color 0.3s; /* Smooth transition effect */
-    cursor: pointer; /* Change cursor to pointer on hover */
+    color: #ccc;
+    transition: color 0.3s;
+    cursor: pointer;
 }
 
 .star-filled {
-    color: #ffd700; /* Color of filled stars */
-    transition: color 0.3s; /* Smooth transition effect */
-    cursor: pointer; /* Change cursor to pointer on hover */
+    color: #ffd700;
+    transition: color 0.3s;
+    cursor: pointer;
 }
-
