--- a/src/stylesheets/Leaderboard.css
+++ b/src/stylesheets/Leaderboard.css
@@ -1,5 +1,3 @@
-/* Leaderboard.css */
-
 .leaderboard-container {
     margin: 0 auto;
     background-color: #222831;
@@ -37,8 +35,6 @@
     margin: 0;
 }
 
-/* UserComponent.css */
-
 .user-container {
     display: flex;
     align-items: center;
@@ -65,7 +61,7 @@
 
 .user-details p {
     margin: 5px;
-    font-weight: bold; /* Optionally apply bold font to user details */
+    font-weight: bold;
 }
 
 .user-component-username {
