--- a/src/stylesheets/Login.css
+++ b/src/stylesheets/Login.css
@@ -1,4 +1,3 @@
-/* Login.css */
 .modal {
     position: fixed;
     z-index: 999;
@@ -6,43 +5,43 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .modal-content {
-    background-color:  #222831;
+    background-color: #222831;
     padding: 70px;
     border-radius: 8px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5); /* Box shadow for depth effect */
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
     position: relative;
     display: flex;
-    flex-direction: column; /* Arrange elements in a vertical fashion */
-    align-items: center; /* Center align the elements */
+    flex-direction: column;
+    align-items: center;
     font-size: 20px;
     color: white;
 }
 
 .form-group {
-    margin-bottom: 15px; /* Add some spacing between form groups */
+    margin-bottom: 15px;
     display: flex;
-    flex-direction: column; /* Arrange input and label in a vertical fashion */
-    align-items: flex-start; /* Align components to the start of the container */
-    width: 100%; /* Set the width to 100% */
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
 }
 
 .form-group label {
-    margin-bottom: 5px; /* Add some spacing between label and input */
+    margin-bottom: 5px;
 }
 
 .form-group input {
-    width: 300px; /* Set the width to 100% */
-    padding: 8px; /* Add some padding to the input */
-    border: 1px solid #ccc; /* Add a border to the input */
-    border-radius: 5px; /* Add border radius */
-    box-sizing: border-box; /* Include padding and border in the width */
+    width: 300px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
     background: #393E46;
     color: white;
 }
@@ -51,13 +50,13 @@
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #A91D3A; /* Change button color to yellow */
-    color: black; /* Change text color to black */
+    background-color: #A91D3A;
+    color: black;
     cursor: pointer;
-    margin-top: 15px; /* Add some space above the button */
-    align-self: center; /* Center the button horizontally */
+    margin-top: 15px;
+    align-self: center;
 }
 
 .log-in-submit:hover {
-    background-color: #C73659; /* Darker yellow on hover */
+    background-color: #C73659;
 }
