--- a/src/stylesheets/Profile.css
+++ b/src/stylesheets/Profile.css
@@ -36,8 +36,8 @@
 }
 
 .profile-header img {
-    width: 150px; /* Fixed width */
-    height: 150px; /* Fixed height */
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 20px;
@@ -78,9 +78,9 @@
 }
 
 .profile-recipes {
-    display: flex; /* Use flexbox */
-    flex-direction: column; /* Items will be arranged vertically */
-    justify-content: center; /* Center the recipes horizontally */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     gap: 10px;
     padding: 20px;
     position: absolute;
@@ -102,17 +102,17 @@
 
 .recipe-list-profile {
     display: flex;
-    flex-wrap: wrap; /* Allow components to wrap */
-    justify-content: center; /* Center the recipes horizontally */
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 1px;
-    padding: 30px 5% 0 5%; /* Adjust the padding */
-    overflow-y: auto; /* Add scrolling if necessary */
-    padding: 0; /* Reset padding */
+    padding: 30px 5% 0 5%;
+    overflow-y: auto;
+    padding: 0;
 }
 
 
 .profile-reviews {
-    gap: 20px; /* Gap between items */
+    gap: 20px;
     position: absolute;
     top: 440px;
     left: 140px;
@@ -123,12 +123,12 @@
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     background-color: #2c313a;
-    overflow-y: auto; /* Enable vertical scrolling */
+    overflow-y: auto;
 }
 
 .review-list-profile {
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Create responsive columns */
-    display: contents; /* Allow the items to follow the grid layout of the parent */
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    display: contents;
 }
 
 .review-list-profile2 {
@@ -154,8 +154,8 @@
 }
 
 .recipe-item-profile:hover {
-    transform: translateY(-5px); /* Move the item up slightly on hover */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Add a subtle shadow */
+    transform: translateY(-5px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .recipe-item-profile:hover::after {
@@ -163,17 +163,17 @@
     position: absolute;
     bottom: 0;
     right: -5px;
-    width: calc(99% ); /* Adjust the width */
-    height: calc(95% ); /* Adjust the height */
-    border-bottom: 7px solid #A91D3A; /* Yellow outline on bottom */
-    border-right: 7px solid #A91D3A; /* Yellow outline on right */
+    width: calc(99% );
+    height: calc(95% );
+    border-bottom: 7px solid #A91D3A;
+    border-right: 7px solid #A91D3A;
     border-radius: 10px;
 }
 
 .recipe-item-profile img {
-    width: 175px; /* Make the image fill the container */
-    height: 175px; /* Set a fixed height */
-    border-radius: 10px 10px 10px 10px; /* Round the top corners */
+    width: 175px;
+    height: 175px;
+    border-radius: 10px 10px 10px 10px;
 }
 
 
@@ -208,7 +208,7 @@
 .review-item img {
     width: 175px;
     height: 175px;
-    border-radius: 10px 10px 10px 10px; /* Round the top corners */
+    border-radius: 10px 10px 10px 10px;
 }
 
 .review-item .star {
