--- a/src/stylesheets/Register.css
+++ b/src/stylesheets/Register.css
@@ -1,4 +1,3 @@
-/* Register.css */
 .register-modal {
     position: fixed;
     z-index: 999;
@@ -6,7 +5,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,45 +16,45 @@
     background-color: #222831;
     padding: 70px;
     border-radius: 8px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5); /* Box shadow for depth effect */
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
     position: relative;
     display: flex;
-    flex-direction: column; /* Arrange elements in a vertical fashion */
-    align-items: center; /* Center align the elements */
+    flex-direction: column;
+    align-items: center;
     font-size: 20px;
 }
 
 .register-modal-content .form-group {
-    margin-bottom: 15px; /* Add some spacing between form groups */
+    margin-bottom: 15px;
     display: flex;
-    flex-direction: column; /* Arrange input and label in a vertical fashion */
-    align-items: flex-start; /* Align components to the start of the container */
-    width: 100%; /* Set the width to 100% */
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
 }
 
 .register-modal-content .form-group label {
-    margin-bottom: 5px; /* Add some spacing between label and input */
+    margin-bottom: 5px;
 }
 
 .register-modal-content .form-group input {
-    width: 300px; /* Set the width to 100% */
-    padding: 8px; /* Add some padding to the input */
-    border-radius: 5px; /* Add border radius */
-    box-sizing: border-box; /* Include padding and border in the width */
-    background:  #393E46;
+    width: 300px;
+    padding: 8px;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background: #393E46;
 }
 
 .register-submit {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #28a745; /* Change button color to green */
-    color: white; /* Change text color to white */
+    background-color: #28a745;
+    color: white;
     cursor: pointer;
-    margin-top: 15px; /* Add some space above the button */
-    align-self: center; /* Center the button horizontally */
+    margin-top: 15px;
+    align-self: center;
 }
 
 .register-submit:hover {
-    background-color: #218838; /* Darker green on hover */
+    background-color: #218838;
 }
