--- a/src/stylesheets/Reviews.css
+++ b/src/stylesheets/Reviews.css
@@ -1,4 +1,3 @@
-/* Reviews.css */
 .reviews-modal {
     position: fixed;
     z-index: 999;
@@ -6,7 +5,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,48 +17,44 @@
     height: 600px;
     padding: 70px;
     border-radius: 8px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5); /* Box shadow for depth effect */
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
     position: relative;
     display: flex;
-    flex-direction: column; /* Arrange elements in a vertical fashion */
-    align-items: center; /* Center align the elements */
+    flex-direction: column;
+    align-items: center;
     font-size: 20px;
-    overflow-y: auto; /* Enable vertical scrolling */
+    overflow-y: auto;
 }
 
 .review {
     display: flex;
-    align-items: flex-start; /* Align items at the start of the container */
-    gap: 80px; /* Space between the elements */
+    align-items: flex-start;
+    gap: 80px;
     margin-bottom: 20px;
     background: #2c313a;
     padding: 50px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     color: white;
 }
 
 .review-author {
     font-size: 13px;
     margin-top: -20px;
-
 }
 
 .review-header {
-    /* Add your styles for the review-header here */
-    font-size: 1.5em; /* Example style */
-    font-weight: bold; /* Example style */
-    /* Other styles as needed */
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 .review-body {
-    margin-bottom: 20px; /* Add some spacing below the body */
-    /* Other styles as needed */
+    margin-bottom: 20px;
 }
 
 .review img {
-    width: 250px; /* Set a fixed width */
-    height: 250px; /* Set a fixed height */
-    border-radius: 5%; /* Make the image round */
+    width: 250px;
+    height: 250px;
+    border-radius: 5%;
     margin-bottom: -40px;
 }
